--- a/ML_Loan_Train_Test.ipynb
+++ b/ML_Loan_Train_Test.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifier for Loan Deafult IBM-Coursera"
+    "# Loan Prediction using various Classification Algorithms"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### This is a peer graded assessment test/examination of IBM-COursera certification Machine Learning With Pyton. We will be doing classification problem on Loan_train dataset to predict the defaulting and genuine customers.\n",
+    "######  We will be doing classification problem on Loan_train dataset to predict the defaulting and genuine customers with the help of Machine Learning using Python\n",
+    "\n",
     "###### Logistic regression, Support Vector Machine, K-Nearest Neighbour and Decision Tree models are built , applied on the data set and evaluated using Jaccard index ,F1-score ,LogLoass as mentioned in the test question."
    ]
   },
